--- a/src/main/resources/templates/edit-student.html
+++ b/src/main/resources/templates/edit-student.html
@@ -5,18 +5,18 @@
 </head>
 <body>
 <h1>Edit Student</h1>
-<form action="#" th:action="@{/students}" th:object="${student}" method="post">
-    <label>First Name: </label>
+<form action="#" th:action="@{/students/edit/{email}(email=${student.email})}" th:object="${student}" method="post">
+    <label>First Name:</label>
     <input type="text" th:field="*{firstname}"/><br/>
-    <label>Last Name: </label>
+
+    <label>Last Name:</label>
     <input type="text" th:field="*{lastname}"/><br/>
-    <label>Age: </label>
-    <input type="number" th:field="*{age}"/><br/>
-    <label>Email: </label>
-    <input type="email" th:field="*{email}" readonly="readonly"/><br/>
-    <button type="submit">Save</button>
+
+
+    <label>Email:</label>
+    <input type="email" th:field="*{email}" readonly/><br/>
+
+    <button type="submit">Update Student</button>
 </form>
-<br/>
-<a href="/students">Back to List</a>
 </body>
 </html>
