--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
     <title>Students</title>
 </head>
 <body>
-<h1>Students</h1>
-<table border="1">
+<h1>Student List</h1>
+<table>
     <tr>
         <th>First Name</th>
         <th>Last Name</th>
@@ -14,17 +14,16 @@
         <th>Actions</th>
     </tr>
     <tr th:each="student : ${students}">
-        <td th:text="${student.firstname}"></td>
-        <td th:text="${student.lastname}"></td>
-        <td th:text="${student.age}"></td>
-        <td th:text="${student.email}"></td>
+        <td th:text="${student.firstname}">First Name</td>
+        <td th:text="${student.lastname}">Last Name</td>
+        <td th:text="${student.age}">Age</td>
+        <td th:text="${student.email}">Email</td>
         <td>
             <a th:href="@{/students/edit/{email}(email=${student.email})}">Edit</a>
             <a th:href="@{/students/delete/{email}(email=${student.email})}">Delete</a>
         </td>
     </tr>
 </table>
-<br/>
-<a href="/students/add">Add Student</a>
+<a th:href="@{/students/add}">Add New Student</a>
 </body>
 </html>
